--- a/css/index.css
+++ b/css/index.css
@@ -83,19 +83,19 @@
         }
             #foodImg1{
                 grid-column: 1;
-                background-image: url(pictures/item1.jpg);
+                background-image: url(../pictures/item1.jpg);
                 width: 100%;
                 height: 160px;
             }
             #foodImg2{
                 grid-column: 2;
-                background-image: url(pictures/item2.jpg);
+                background-image: url(../pictures/item2.jpg);
                 width: 100%;
                 height: 160px;
             }
             #foodImg3{
                 grid-column: 3;
-                background-image: url(pictures/item3.jpg);
+                background-image: url(../pictures/item3.jpg);
                 width: 100%;
                 height: 160px;
             }
